deploy/k8s-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zen-pg
  labels:
    app: zen-pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zen-pg
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zen-pg
    spec:
      containers:
        - name: zen-pg
          image: postgres:14
          ports:
            - name: zen-pg-5432
              containerPort: 5432
          volumeMounts:
            - name: zen-pg-pv-claim
              readOnly: false
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: zen-pg-pv-claim
          persistentVolumeClaim:
            claimName: zen-pg-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: zen-pg-svc
spec:
  ports:
  - port: 5432
    targetPort: zen-pg-5432
    protocol: TCP
  selector:
    app: zen-pg
